--- a/src/MainInterface.fxml
+++ b/src/MainInterface.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.collections.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="545.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InterfaceController">
+<AnchorPane prefHeight="545.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InterfaceController">
     <children>
-      <Pane fx:id="connectionPane" layoutX="7.0" prefHeight="102.0" prefWidth="756.0">
+      <Pane fx:id="connectionPane" layoutX="7.0" prefHeight="102.0" prefWidth="810.0">
          <children>
              <TextField fx:id="ipField" layoutX="77.0" layoutY="39.0" promptText="127.0.0.1" text="127.0.0.1" />
              <TextField fx:id="portField" layoutX="351.0" layoutY="26.0" promptText="5217" text="5217" />
@@ -77,6 +85,7 @@
 
           <TextArea fx:id="logArea" layoutX="535.0" layoutY="138.0" prefHeight="281.0" prefWidth="262.0" scrollLeft="300.0" scrollTop="200.0">
                 </TextArea>
+      <Button fx:id="ClearLoggerBut" layoutX="535.0" layoutY="428.0" mnemonicParsing="false" onAction="#clearLoggerButClick" prefHeight="25.0" prefWidth="262.0" text="Clear" />
     </children>
 
 </AnchorPane>
