--- a/src/MainInterface.fxml
+++ b/src/MainInterface.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="545.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InterfaceController">
+<AnchorPane prefHeight="545.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InterfaceController">
     <children>
       <Pane fx:id="connectionPane" layoutX="7.0" prefHeight="102.0" prefWidth="810.0">
          <children>
@@ -55,7 +47,7 @@
                <children>
                   <Pane layoutX="14.0" layoutY="52.0" prefHeight="33.0" prefWidth="330.0" style="-fx-background-color: rgb(150,150,150);">
                      <children>
-                        <Text fx:id="fileField" layoutX="10.0" layoutY="22.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="filen name" wrappingWidth="235.5078163444996">
+                        <Text fx:id="fileField" layoutX="10.0" layoutY="22.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="file name" wrappingWidth="235.5078163444996">
                            <font>
                               <Font size="14.0" />
                            </font>
