fix bugs, interface and choosers1

--- a/src/MainInterface.fxml
+++ b/src/MainInterface.fxml
@@ -40,6 +40,7 @@
                             <String fx:value="DELETE" />
                             <String fx:value="SEND" />
                             <String fx:value="LIST" />
+<!--                            <String fx:value="TEST" />-->
                         </FXCollections>
                     </items>
                 </ChoiceBox>
