--- a/src/MainInterface.fxml
+++ b/src/MainInterface.fxml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.collections.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="545.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InterfaceController">
+<AnchorPane prefHeight="545.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InterfaceController">
     <children>
       <Pane fx:id="connectionPane" layoutX="7.0" prefHeight="102.0" prefWidth="810.0">
          <children>
-             <TextField fx:id="ipField" layoutX="77.0" layoutY="39.0" promptText="127.0.0.1" text="127.0.0.1" />
-             <TextField fx:id="portField" layoutX="351.0" layoutY="26.0" promptText="5217" text="5217" />
-             <TextField fx:id="transferPortField" layoutX="351.0" layoutY="54.0" promptText="5218" text="5218" />
-            <Button fx:id="ConnectButton" layoutX="591.0" layoutY="39.0" mnemonicParsing="false" onAction="#connectButClick" prefHeight="25.0" prefWidth="98.0" text="Connect" />
-            <Label layoutX="313.0" layoutY="30.0" text="port:" />
-            <Label layoutX="14.0" layoutY="43.0" prefHeight="17.0" prefWidth="54.0" text="address:" />
-            <Label layoutX="269.0" layoutY="58.0" text="transfer port:" />
+             <TextField fx:id="ipField" focusTraversable="false" layoutX="68.0" layoutY="51.0" promptText="127.0.0.1" text="127.0.0.1" />
+             <TextField fx:id="portField" focusTraversable="false" layoutX="263.0" layoutY="14.0" prefHeight="25.0" prefWidth="190.0" promptText="5217" text="5217" />
+             <TextField fx:id="transferPortField" focusTraversable="false" layoutX="304.0" layoutY="51.0" promptText="5218" text="5218" />
+            <Button fx:id="SignInButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#signInButClick" prefHeight="25.0" prefWidth="98.0" text="Sign in" />
+            <Label layoutX="229.0" layoutY="18.0" text="port:" />
+            <Label layoutX="14.0" layoutY="55.0" prefHeight="17.0" prefWidth="54.0" text="address:" />
+            <Label layoutX="229.0" layoutY="55.0" text="transfer port:" />
+            <TextField fx:id="loginField" focusTraversable="false" layoutX="514.0" layoutY="14.0" prefHeight="25.0" prefWidth="180.0" promptText="5217" text="user" />
+            <Label layoutX="479.0" layoutY="17.0" text="login:" />
+            <Label layoutX="479.0" layoutY="55.0" text="password:" />
+            <PasswordField fx:id="passField" focusTraversable="false" layoutX="545.0" layoutY="51.0" text="1234" />
 
          </children>
       </Pane>
